--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jquery.canvas-area-draw",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "description": "Use a canvas based drawing tool to create image map coordinates.",
   "repository": {
     "type": "git",
-    "url": "git://github.com/fahrenheit-marketing/canvas-area-draw.git"
+    "url": "https://github.com/InformationArchiTECH/jquery-canvas-area-draw"
   },
   "author": "Jacob Williams",
   "license": "MIT",
